--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+galliumos-device-c710 (1.0.3) vivid-galliumos; urgency=medium
+
+  * Systemd slice files
+
+ -- Hugh Greenberg <hugh@galliumos.org>  Tue, 8 Sep 2015 22:16:16 -0600
+
 galliumos-device-c710 (1.0.1) vivid-galliumos; urgency=medium
 
   * Changes
