--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+galliumos-device-c710 (1.0.14) vivid-galliumos; urgency=medium
+
+  * Removed /etc/skel
+
+ -- Hugh Greenberg <hugh@galliumos.org>  Thu, 15 Oct 2015 22:16:16 -0600
+
+galliumos-device-c710 (1.0.13) vivid-galliumos; urgency=medium
+
+  * Modified dependencies
+
+ -- Hugh Greenberg <hugh@galliumos.org>  Thu, 15 Oct 2015 22:16:16 -0600
+
 galliumos-device-c710 (1.0.11) vivid-galliumos; urgency=medium
 
   * Removed systemd slice files
