--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+galliumos-sandy (1.0.16) vivid-galliumos; urgency=medium
+
+  * Rename from galliumos-device-c710 to galliumos-sandy
+
+ -- Colton DRG <coltondrg@galliumos.org>  Tue, 27 Oct 2015 22:16:16 -0600
+
 galliumos-device-c710 (1.0.15) vivid-galliumos; urgency=medium
 
   * Added provides
