--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+galliumos-sandy (1.0.17) vivid-galliumos; urgency=medium
+
+  * Updated wifi sleep script
+
+ -- Hugh Greenberg <hugh@galliumos.org>  Thu, 28 Apr 2016 22:16:16 -0600
+
 galliumos-sandy (1.0.16) vivid-galliumos; urgency=medium
 
   * Rename from galliumos-device-c710 to galliumos-sandy
