--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+galliumos-sandy (2.1.0) xenon; urgency=medium
+
+  * Add /etc/modprobe.d/sdhci for slower SD card readers
+
+ -- reynhout <reynhout@galliumos.org>  Mon, 02 Jan 2017 01:04:47 +0000
+
 galliumos-sandy (2.0.0) vivid-galliumos; urgency=medium
 
   * Package for xenial
