Rename s/sandy/sandyivy/; update conflicts list

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-galliumos-sandy (2.9901) bismuth; urgency=medium
+galliumos-sandyivy (2.9901) bismuth; urgency=medium
 
   * Prepare for GalliumOS 3.0
+  * Rename from galliumos-sandy
 
  -- reynhout <reynhout@galliumos.org>  Sun, 06 May 2018 07:04:41 +0000
 
